force-app/main/default/objects/Application__c/fields/Able_to_Continue_Supporting_Youth__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Continue_Supporting_Youth__c</fullName>
    <label>Able to Continue Supporting Youth</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>