force-app/main/default/objects/Application__c/fields/Able_to_Continue_Supporting_Youth_Notes__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Continue_Supporting_Youth_Notes__c</fullName>
    <label>Able to Continue Supporting Youth Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>