force-app/main/default/objects/Application__c/fields/Able_to_Continue_Supporting_Youth_Score__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Continue_Supporting_Youth_Score__c</fullName>
    <label>Able to Continue Supporting Youth Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>