force-app/main/default/objects/Application__c/fields/Able_to_Recruit__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Recruit__c</fullName>
    <label>Able to Recruit</label>
    <type>TextArea</type>
</CustomField>