force-app/main/default/objects/Application__c/fields/Access_to_Computers__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Computers__c</fullName>
    <label>Access to Computers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>