force-app/main/default/objects/Application__c/fields/Address_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Address_Formatted__c</fullName>
    <formula
  >Address__c &amp; BR() &amp; City__c &amp; &apos;, &apos; &amp; State_Abbreviation__c &amp; &apos; &apos; &amp; Postal_Zip_Code__c</formula>
    <label>Address Formatted</label>
    <type>Text</type>
</CustomField>