force-app/main/default/objects/Application__c/fields/Adequate_Space__c.field-meta.xml
<CustomField>
    <fullName>Adequate_Space__c</fullName>
    <label>Adequate Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>