force-app/main/default/objects/Application__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ages 5-8</fullName>
            </value>
            <value>
                <fullName>Ages 9-12</fullName>
            </value>
            <value>
                <fullName>Ages 13-15</fullName>
            </value>
            <value>
                <fullName>Ages 16-18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>