force-app/main/default/objects/Application__c/fields/Alternate_Signing_Method__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Signing_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternate Signing Method</label>
    <type>Checkbox</type>
</CustomField>