force-app/main/default/objects/Application__c/fields/Amount_of_Funding_Matched__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Funding_Matched__c</fullName>
    <label>Amount of Funding Matched</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>