force-app/main/default/objects/Application__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>