force-app/main/default/objects/Application__c/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <formula>State_Abbreviation__c + &apos;-&apos; + RIGHT(Name, 4)</formula>
    <label>Applicant Id</label>
    <type>Text</type>
</CustomField>