force-app/main/default/objects/Application__c/fields/Applicant_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone_Number__c</fullName>
    <label>Applicant Phone Number</label>
    <type>Phone</type>
</CustomField>