force-app/main/default/objects/Application__c/fields/Application_Title__c.field-meta.xml
<CustomField>
    <fullName>Application_Title__c</fullName>
    <formula
  >IF(CONTAINS(RecordType.Name, &apos;GREAT&apos;), &quot;Ripken I&apos;m GREAT&quot;, 
IF(CONTAINS(RecordType.Name, &apos;Baseball&apos;), &apos;Ripken Badges for Baseball&apos;, 
IF(CONTAINS(RecordType.Name, &apos;Special Initiative&apos;), &apos;Ripken Special Initiative&apos;, 
IF(CONTAINS(RecordType.Name, &apos;Under Armour&apos;), &apos;Under Armour&apos;, 
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Title</label>
    <type>Text</type>
</CustomField>