force-app/main/default/objects/Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula
  >IF(CONTAINS(RecordType.Name,&apos;Catalyst&apos;), &apos;Community Catalyst Grant&apos;, IF(CONTAINS(RecordType.Name,&apos;Freedom&apos;), &apos;Freedom Grant&apos;, &apos;Pride Grant&apos;))</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>