force-app/main/default/objects/Application__c/fields/Applied_for_Set_Aside_Program__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Set_Aside_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied for Set-Aside Program</label>
    <type>Checkbox</type>
</CustomField>