force-app/main/default/objects/Application__c/fields/Applied_For_Victim_Services_Program__c.field-meta.xml
<CustomField>
    <fullName>Applied_For_Victim_Services_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied For Victim Services Program</label>
    <type>Checkbox</type>
</CustomField>