force-app/main/default/objects/Application__c/fields/Audit_Finding__c.field-meta.xml
<CustomField>
    <fullName>Audit_Finding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Finding</label>
    <type>Checkbox</type>
</CustomField>