force-app/main/default/objects/Application__c/fields/Audit_Fund__c.field-meta.xml
<CustomField>
    <fullName>Audit_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Fund</label>
    <type>Checkbox</type>
</CustomField>