force-app/main/default/objects/Application__c/fields/Authority_to_Apply__c.field-meta.xml
<CustomField>
    <fullName>Authority_to_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authority to Apply</label>
    <type>Checkbox</type>
</CustomField>