force-app/main/default/objects/Application__c/fields/Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Awarded Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>