force-app/main/default/objects/Application__c/fields/Biggest_Issue_Org_is_Facing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Issue_Org_is_Facing_Notes__c</fullName>
    <label>Biggest Issue Org is Facing Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>