force-app/main/default/objects/Application__c/fields/Biggest_Issue_Org_is_Facing_Score__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Issue_Org_is_Facing_Score__c</fullName>
    <label>Biggest Issue Org is Facing Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>