force-app/main/default/objects/Application__c/fields/Budget_Details__c.field-meta.xml
<CustomField>
    <fullName>Budget_Details__c</fullName>
    <label>Budget Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>