force-app/main/default/objects/Application__c/fields/Caretaker_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_Involvement__c</fullName>
    <label>Caretaker Involvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>