force-app/main/default/objects/Application__c/fields/Caretaker_Involvement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_Involvement_Notes__c</fullName>
    <label>Caretaker Involvement Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>