force-app/main/default/objects/Application__c/fields/Caretaker_Involvement_Score__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_Involvement_Score__c</fullName>
    <label>Caretaker Involvement Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>