force-app/main/default/objects/Application__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC</label>
    <type>Email</type>
</CustomField>