force-app/main/default/objects/Application__c/fields/CEO_Ext__c.field-meta.xml
<CustomField>
    <fullName>CEO_Ext__c</fullName>
    <label>CEO Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>