force-app/main/default/objects/Application__c/fields/CEO_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_First_Name__c</fullName>
    <label>CEO First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>