force-app/main/default/objects/Application__c/fields/CEO_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Last_Name__c</fullName>
    <label>CEO Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>