force-app/main/default/objects/Application__c/fields/CEO_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CEO_Mobile__c</fullName>
    <label>CEO Mobile</label>
    <type>Phone</type>
</CustomField>