force-app/main/default/objects/Application__c/fields/CEO_Prefix__c.field-meta.xml
<CustomField>
    <fullName>CEO_Prefix__c</fullName>
    <label>CEO Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>