force-app/main/default/objects/Application__c/fields/CEO_Role__c.field-meta.xml
<CustomField>
    <fullName>CEO_Role__c</fullName>
    <label>CEO Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>