force-app/main/default/objects/Application__c/fields/CEO_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CEO_Suffix__c</fullName>
    <label>CEO Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>