force-app/main/default/objects/Application__c/fields/CEO_Title__c.field-meta.xml
<CustomField>
    <fullName>CEO_Title__c</fullName>
    <label>CEO Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>