force-app/main/default/objects/Application__c/fields/Cities_Served__c.field-meta.xml
<CustomField>
    <fullName>Cities_Served__c</fullName>
    <label>Cities Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Denver, CO</fullName>
            </value>
            <value>
                <fullName>Houston, TX</fullName>
            </value>
            <value>
                <fullName>Nashville, TN</fullName>
            </value>
            <value>
                <fullName>New York, NY</fullName>
            </value>
            <value>
                <fullName>Pittsburgh, PA</fullName>
            </value>
            <value>
                <fullName>Portland, OR</fullName>
            </value>
            <value>
                <fullName>Rialto, CA</fullName>
            </value>
            <value>
                <fullName>San Francisco, CA</fullName>
            </value>
            <value>
                <fullName>None of the Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>