force-app/main/default/objects/Application__c/fields/Community_Health_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Community_Health_Partnership__c</fullName>
    <label>Community Health Partnership</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>