force-app/main/default/objects/Application__c/fields/Community_Health_Partnership_Notes__c.field-meta.xml
<CustomField>
    <fullName>Community_Health_Partnership_Notes__c</fullName>
    <label>Community Health Partnership Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>