force-app/main/default/objects/Application__c/fields/Community_Health_Partnership_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Community_Health_Partnership_Score_2__c</fullName>
    <label>Community Health Partnership Score 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>