force-app/main/default/objects/Application__c/fields/Community_Health_Partnership_Score__c.field-meta.xml
<CustomField>
    <fullName>Community_Health_Partnership_Score__c</fullName>
    <label>Community Health Partnership Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>