force-app/main/default/objects/Application__c/fields/Contractor_Travel_Budget__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Travel_Budget__c</fullName>
    <label>Contractor Travel Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>