force-app/main/default/objects/Application__c/fields/Contractor_Travel_Description__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Travel_Description__c</fullName>
    <label>Contractor Travel Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>