force-app/main/default/objects/Application__c/fields/Contracts_Budget__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Budget__c</fullName>
    <label>Contracts Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>