force-app/main/default/objects/Application__c/fields/Contracts_Description__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Description__c</fullName>
    <label>Contracts Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>