force-app/main/default/objects/Application__c/fields/Demographic__c.field-meta.xml
<CustomField>
    <fullName>Demographic__c</fullName>
    <label>Demographic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Military</fullName>
            </value>
            <value>
                <fullName>Veterans</fullName>
            </value>
            <value>
                <fullName>First Responders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>