force-app/main/default/objects/Application__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>