force-app/main/default/objects/Application__c/fields/Eligibility_Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Notice_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Notice Received</label>
    <type>Checkbox</type>
</CustomField>