force-app/main/default/objects/Application__c/fields/Eligible_for_Round_One_Funding__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Round_One_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Round One Funding</label>
    <type>Checkbox</type>
</CustomField>