force-app/main/default/objects/Application__c/fields/Employees_Donating_Volunteering_Sitting__c.field-meta.xml
<CustomField>
    <fullName>Employees_Donating_Volunteering_Sitting__c</fullName>
    <label>Employees Donating Volunteering Sitting</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>