force-app/main/default/objects/Application__c/fields/Equipment_and_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Supplies__c</fullName>
    <label>Equipment and Supplies</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>