force-app/main/default/objects/Application__c/fields/Equipment_and_Supplies_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Supplies_Amount__c</fullName>
    <label>Equipment and Supplies Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
            <value>
                <fullName>$100,001-$200,000</fullName>
            </value>
            <value>
                <fullName>$200,001-$350,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>