force-app/main/default/objects/Application__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian/Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian/Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Black/African-American</fullName>
            </value>
            <value>
                <fullName>Hispanic/Latino</fullName>
            </value>
            <value>
                <fullName>Multiple Ethnic Groups</fullName>
            </value>
            <value>
                <fullName>White, Non-Hispanic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>