force-app/main/default/objects/Application__c/fields/Example_of_Unsuccessful_Program__c.field-meta.xml
<CustomField>
    <fullName>Example_of_Unsuccessful_Program__c</fullName>
    <inlineHelpText
  >Please provide an example of a time when the project/program did not succeed. What lessons were learned and how will they be applied to future programs/projects?</inlineHelpText>
    <label>Example of Unsuccessful Program</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>