force-app/main/default/objects/Application__c/fields/Example_of_Unsuccessful_Program_Comments__c.field-meta.xml
<CustomField>
    <fullName>Example_of_Unsuccessful_Program_Comments__c</fullName>
    <label>Example of Unsuccessful Program Comments</label>
    <type>TextArea</type>
</CustomField>