force-app/main/default/objects/Application__c/fields/Excluded_Parties_List__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Parties_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded Parties List</label>
    <type>Checkbox</type>
</CustomField>