force-app/main/default/objects/Application__c/fields/Existing_Services__c.field-meta.xml
<CustomField>
    <fullName>Existing_Services__c</fullName>
    <label>Existing Services</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>