force-app/main/default/objects/Application__c/fields/FA_Same_as_CEO__c.field-meta.xml
<CustomField>
    <fullName>FA_Same_as_CEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FA Same as CEO</label>
    <type>Checkbox</type>
</CustomField>