force-app/main/default/objects/Application__c/fields/Federal_Debt__c.field-meta.xml
<CustomField>
    <fullName>Federal_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal Debt</label>
    <type>Checkbox</type>
</CustomField>