force-app/main/default/objects/Application__c/fields/Finance_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Email__c</fullName>
    <label>Finance Admin Email</label>
    <type>Email</type>
</CustomField>