force-app/main/default/objects/Application__c/fields/Finance_Admin_Ext__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Ext__c</fullName>
    <label>Finance Admin Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>