force-app/main/default/objects/Application__c/fields/Finance_Admin_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Last_Name__c</fullName>
    <label>Finance Admin Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>