force-app/main/default/objects/Application__c/fields/Finance_Admin_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Mobile__c</fullName>
    <label>Finance Admin Mobile</label>
    <type>Phone</type>
</CustomField>