force-app/main/default/objects/Application__c/fields/Finance_Admin_Phone__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Phone__c</fullName>
    <label>Finance Admin Phone</label>
    <type>Phone</type>
</CustomField>