force-app/main/default/objects/Application__c/fields/Finance_Admin_Role__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Role__c</fullName>
    <label>Finance Admin Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>