force-app/main/default/objects/Application__c/fields/Finance_Admin_Title__c.field-meta.xml
<CustomField>
    <fullName>Finance_Admin_Title__c</fullName>
    <label>Finance Admin Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>