force-app/main/default/objects/Application__c/fields/FirstPic_National_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code__c</fullName>
    <formula
  >IF(Organization__r.FirstPic_National_Org_Code__c != &apos;&apos;, Organization__r.FirstPic_National_Org_Code__c, National_Organization__r.FirstPic_Org_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstPic National Org Code</label>
    <type>Text</type>
</CustomField>