force-app/main/default/objects/Application__c/fields/Fringe_Benefits_Budget__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Benefits_Budget__c</fullName>
    <label>Fringe Benefits Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>