force-app/main/default/objects/Application__c/fields/Fringe_Benefits_Description__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Benefits_Description__c</fullName>
    <label>Fringe Benefits Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>