force-app/main/default/objects/Application__c/fields/Funding_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Funding_Limitations__c</fullName>
    <label>Funding Limitations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>