force-app/main/default/objects/Application__c/fields/Funding_to_Purchase_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Funding_to_Purchase_Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding to Purchase Trailer</label>
    <type>Checkbox</type>
</CustomField>