force-app/main/default/objects/Application__c/fields/Funding_to_Purchase_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Funding_to_Purchase_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding to Purchase Vehicle</label>
    <type>Checkbox</type>
</CustomField>