force-app/main/default/objects/Application__c/fields/GA_Same_as_CEO__c.field-meta.xml
<CustomField>
    <fullName>GA_Same_as_CEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GA Same as CEO</label>
    <type>Checkbox</type>
</CustomField>