force-app/main/default/objects/Application__c/fields/Grant_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Email__c</fullName>
    <label>Grant Admin Email</label>
    <type>Email</type>
</CustomField>