force-app/main/default/objects/Application__c/fields/Grant_Admin_Ext__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Ext__c</fullName>
    <label>Grant Admin Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>